Se agrega boton para procesar las imagenes desde la web.

--- a/src/app/demo/components/procesos/vehiculos/vehiculos.component.html
+++ b/src/app/demo/components/procesos/vehiculos/vehiculos.component.html
@@ -13,9 +13,13 @@
             <tr [pContextMenuRow]="plate">
                 <td>{{plate._id}}</td>
                 <td>{{plate.plate}}</td>
-                <td>{{plate.codeRegion}}</td>
-                <td>{{plate.score}}</td>
                 <td>{{plate.type}}</td>
+                <td>{{plate.identification}}</td>
+                <td>{{plate.fullName}}</td>
+
+                <td>{{plate.city}}</td>
+                <td>{{plate.typeInfraction}}</td>
+                <td>{{plate.valueOfTheFine}}</td>
             </tr>
         </ng-template>
     </p-table>
