Se crea el dashboard diamico asociado a la informacion de la BD.

--- a/src/app/demo/components/procesos/lecturas/lecturas.component.html
+++ b/src/app/demo/components/procesos/lecturas/lecturas.component.html
@@ -20,6 +20,7 @@
                     <td>{{plate._id}}</td>
                     <td>{{plate.processing_time}}</td>
                     <td>{{plate.fileNameClient}}</td>
+                    <td>{{plate.datePlateImage | date:"dd-MM-yyyy, h:mm a"}}</td>
                     <td>{{plate.createdAt | date:"dd-MM-yyyy, h:mm a"}}</td>
                 </tr>
             </ng-template>
